final version paper piccard 1.0

--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -95,12 +95,9 @@ introduced in detail in Section~\ref{sec:method}, along with the included
 interface. Illustrative scenarios for Chicago and Toronto are presented in
 Section~\ref{sec:study} and the feedback of five field experts are summarised in
 Section~\ref{sec:expert}. Our prototype system is available at
-\censure{\url{http://uoft.me/piccard}}, including more than forty regions in the
-US and Canada. The source code is publicly available at
-\censure{\url{https://github.com/fabioasdias/piccard}}.\footnote{The editors are
-considering, at our request, an exception to the double-blind requirement to
-allow access to the system. We provided them with the URLs of the system, code,
-and documentation separately.}
+\url{http://uoft.me/piccard}, including more than forty regions in the US and
+Canada. The source code is publicly available at
+\url{https://github.com/fabioasdias/piccard}.
 
 
 \section{Intuition}
@@ -148,7 +145,7 @@ the data and reality by creating artificial data points.
         \includegraphics[width=0.475\linewidth]{intuition.png}
     }
     \subfloat{
-        \begin{tikzpicture}
+        \begin{tikzpicture}[scale=0.75, every node/.style={scale=0.75}]
             \node (push) at (-2,0) {};
             \node [circle, draw=red, thick] (a) at (0,4) {A};
             \node [circle, draw=green, thick] (b) at (4,4) {B};
