--- a/sup/sup.tex
+++ b/sup/sup.tex
@@ -46,7 +46,7 @@
 \newcommand{\squishend}{
   \end{list}  }
 
-\newcommand{\censure}[1]{}
+\newcommand{\censure}[1]{#1}
 \begin{document}
 
 \maketitle
