british spelling on title

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -40,7 +40,7 @@
 
 
 \usepackage{authblk}
-\title{Neighborhood Dynamics with Unharmonised Longitudinal Data}
+\title{Neighbourhood Dynamics with Unharmonised Longitudinal Data}
 \author[1]{Fabio Dias}
 \author[2]{Daniel Silver}
 \affil[1]{Department of Mechanical \& Industrial Engineering, University of Toronto, Toronto, Canada.}
